# llm-pretraining-interpretability

./: .gitignore  pyproject.toml
data/: input.txt
notebooks/: grokking.ipynb
src/utils/: logger.py  meminfo.py  torchsummary.py
