[project]
name = "grokking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "ruff>=0.14.11",
    "torch>=2.9.1",
    "wandb>=0.23.1",
]
